# multiply-backend-coding-task

./: .flaskenv  .pre-commit-config.yaml  README.md  pyproject.toml  scripts.py
api/: api.py  models.py
multiply_backend_coding_task/: api.py  exceptions.py  goal_service.py  models.py  user_service.py  utilities.py
tests/: conftest.py  test_api.py  test_goal_service.py  test_user_service.py
tests/feature_tests/: conftest.py  test_api.py  test_goal_api.py  test_user_api.py
